--- a/css/custom.css
+++ b/css/custom.css
@@ -6,3 +6,8 @@ h5,
 h6 {
 font-family: "Raleway"
 }
+
+.intro {
+  background: url(../img/canada.jpg) no-repeat bottom center scroll;
+  background-color: white;
+}
