--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,6 @@ font-family: "Raleway"
 }
 
 .intro {
-  background: url(../img/canada.jpg) no-repeat bottom center scroll;
+  background: url(https://brandonwexler.github.io/wedding/img/canada.jpg) no-repeat bottom center scroll;
   background-color: white;
 }
