--- a/css/custom.css
+++ b/css/custom.css
@@ -12,3 +12,7 @@ font-family: "Raleway"
   background-color: black;
   background-size: cover;
 }
+
+.navbar-custom {
+  background-color: #77D9C4
+}
