--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,8 @@ font-family: "Raleway"
   background-color: black;
   background-size: cover;
 }
-
-.navbar-custom {
-  background-color: #77D9C4
+.navbar-custom.top-nav-collapse {
+  padding: 0;
+  background: #77D9C4;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
