--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,6 @@ font-family: "Raleway"
 }
 .navbar-custom.top-nav-collapse {
   padding: 0;
-  background: #77D9C4;
+  background: #7ec5b7;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
