--- a/css/custom.css
+++ b/css/custom.css
@@ -17,3 +17,6 @@ font-family: "Raleway"
   background: #7ec5b7;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+.download-section {
+  color: black;
+}
