--- a/css/custom.css
+++ b/css/custom.css
@@ -18,5 +18,5 @@ font-family: "Raleway"
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 .download-section {
-  color: black;
+  background-color: black;
 }
