--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,8 @@ font-size: 15px;
 .download-section {
   background-color: black;
   background: url(../img/weddingdetails.jpg) no-repeat center center scroll;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .rsvp-section {
   background-color: black;
