--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@ font-size: 15px;
 }
 .navbar-custom.top-nav-collapse {
   padding: 0;
-  background: #7d8774;
+  background: #42DCA3;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 .wedding-section {
